src/main/default/objects/BP_Gameplay__c/BP_Gameplay__c.object-meta.xml
<CustomObject>
    <label>Gameplay</label>
    <nameField>
        <label>Game Play Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gameplays</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>