src/main/default/objects/BP_Gameplay__c/fields/BP_Game__c.field-meta.xml
<CustomField>
    <fullName>BP_Game__c</fullName>
    <label>Game</label>
    <referenceTo>BP_CollectionItem__c</referenceTo>
    <relationshipName>Game_Plays</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>