src/main/default/objects/BP_Gameplay__c/fields/BP_Organizer__c.field-meta.xml
<CustomField>
    <fullName>BP_Organizer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organizer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Game_Plays</relationshipName>
    <type>Lookup</type>
</CustomField>