src/main/default/objects/BP_Gameplay__c/fields/BP_PlayDate__c.field-meta.xml
<CustomField>
    <fullName>BP_PlayDate__c</fullName>
    <label>Play Date</label>
    <type>Date</type>
</CustomField>