src/main/default/objects/BP_Gameplay__c/fields/BP_Winner__c.field-meta.xml
<CustomField>
    <fullName>BP_Winner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Winner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Gameplays</relationshipName>
    <type>Lookup</type>
</CustomField>