src/main/default/objects/BP_Gameplay__c/listViews/BP_MyGameplays.listView-meta.xml
<ListView>
    <fullName>BP_MyGameplays</fullName>
    <columns>NAME</columns>
    <columns>BP_Game__c</columns>
    <columns>BP_Organizer__c</columns>
    <columns>BP_PlayDate__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Gameplays</label>
</ListView>