src/main/default/objects/BP_Gameplay__c/listViews/BP_MyGameplaysFromLast7Days.listView-meta.xml
<ListView>
    <fullName>BP_MyGameplaysFromLast7Days</fullName>
    <columns>NAME</columns>
    <columns>BP_Game__c</columns>
    <columns>BP_Organizer__c</columns>
    <columns>BP_PlayDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BP_PlayDate__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>My Gameplays From Last 7 Days</label>
</ListView>